objects/EUR_CRM_Product_Toolkit__c.object
<CustomObject>
    <description>Ad hoc User defined groups of Products</description>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit (EU)</label>
        <referenceTo>EUR_CRM_Visit__c</referenceTo>
        <relationshipLabel>Product Toolkits (EU)</relationshipLabel>
        <relationshipName>Product_Toolkits_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Toolkit (EU)</label>
    <listViews>
        <fullName>All_FI_Product_Toolkit</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Is_Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Product_Toolkit__c.EUR_FI_Product_Toolkit</value>
        </filters>
        <label>All FI Product Toolkit</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_FI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DK_Product_Toolkit</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Is_Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Product_Toolkit__c.EUR_DK_OFF_Trade_Product_Toolkit,EUR_CRM_Product_Toolkit__c.EUR_DK_ON_Trade_Product_Toolkit</value>
        </filters>
        <label>EUR DK Product Toolkit</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Toolkit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Toolkits (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_DK_OFF_Trade_Product_Toolkit</fullName>
        <active>true</active>
        <label>EUR DK OFF Trade Product Toolkit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_ON_Trade_Product_Toolkit</fullName>
        <active>true</active>
        <label>EUR DK ON Trade Product Toolkit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Product_Toolkit</fullName>
        <active>true</active>
        <label>EUR DK Product Toolkit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Product_Toolkit</fullName>
        <active>true</active>
        <label>EUR FI Product Toolkit</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>